cleanup [editor]: fix warnings in `InlayModelImpl`
GitOrigin-RevId: de28b1108d895c897322b6237df1a4af408584f1